# rust-iocp

./: Cargo.toml  README.md  index.html  style.css
doc/: search-index.js
doc/implementors/core/clone/: trait.Clone.js
doc/implementors/core/error/: trait.Error.js
doc/implementors/core/fmt/: trait.Debug.js  trait.Display.js  trait.Show.js
doc/implementors/core/kinds/: trait.Copy.js  trait.Send.js  trait.Sync.js
doc/implementors/core/marker/: trait.Copy.js  trait.Send.js  trait.Sync.js
doc/implementors/core/ops/: trait.Drop.js
doc/implementors/std/error/: trait.Error.js
doc/iocp/: enum.IocpError.html  index.html  stability.html  stability.json  struct.CompletionStatus.html  struct.IoCompletionPort.html  struct.OVERLAPPED.html  type.HANDLE.html  type.IocpResult.html
doc/iocp/ffi/: type.BOOL.html  type.DWORD.html  type.HANDLE.html  type.LPDWORD.html  type.LPOVERLAPPED.html  type.c_ulong.html
doc/src/iocp/: ffi.rs.html  lib.rs.html
examples/: main.rs
src/: ffi.rs  lib.rs
