[package]

name = "iocp"
version = "0.0.1"
authors = ["cyderize <admin@cyderize.org>"]

description = "A Windows IOCP library for Rust"

repository = "https://github.com/cyderize/rust-iocp.git"

readme = "README.md"

keywords = ["iocp", "async", "asynchronous", "input", "output", "control", "port"]

license = "MIT"